# betaflight-blackbox-field-sync

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  go.mod  go.sum  index.html  install.sh  package-lock.json  package.json  pyproject.toml  server.js  styles.css
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_compat.md
.github/workflows/: build-image.yml  ci.yml  go-ci.yml  security.yml
bbsyncer/: __init__.py  __main__.py  config.py
bbsyncer/_native/: __init__.py
bbsyncer/fc/: __init__.py  detector.py
bbsyncer/led/: __init__.py  controller.py
bbsyncer/msp/: __init__.py  client.py  crc.py  framing.py  huffman.py
bbsyncer/storage/: __init__.py  manifest.py  (+1 more)
boot/: bbsyncer-config.txt  logfalcon-config.txt
config/: bbsyncer.toml  logfalcon.toml
docs/: FC_COMPATIBILITY_ANALYSIS.md  guide.html  index.html
logfalcon/: __init__.py  __main__.py  config.py
pi-gen/: build.sh  config
system/: 99-betaflight-fc.rules  bbsyncer-firstboot.service  bbsyncer-web.service  bbsyncer@.service  firstboot.sh  hostapd.conf  logfalcon-boot-led.service  logfalcon-boot-led.sh  logfalcon-firstboot.service  logfalcon-web.service  logfalcon@.service
tests/: test_config.py  test_fc_detector.py  test_huffman.py  test_led_controller.py  test_manifest.py  test_msp_client.py  test_msp_crc.py  test_msp_framing.py  test_native_extension.py  test_storage_writer.py  test_sync_orchestrator.py  test_web_server.py
(+41 files in other folders)
