[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betaflight-blackbox-field-sync"
version = "0.1.0"
description = "Field blackbox log syncer for Betaflight FCs via Raspberry Pi Zero W"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pyserial>=3.5",
    "flask>=3.0",
    "RPi.GPIO>=0.7.1; platform_machine in 'armv6l armv7l aarch64'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
bbsyncer = "bbsyncer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bbsyncer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
